--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,13 @@
       <artifactId>extentreports</artifactId>
       <version>5.1.2</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>3.2.0</version>
+    </dependency>
   </dependencies>
+
 
   <build>
     <plugins>
